feat: new endpoint - deposit
